--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<style>
-html, body {
-    height: 100%;
-}
-body {
-    margin: 0;
-}
-div {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-</style>
-<div style="font-size:44px;">😀</div>
+<html>
+    <head>
+        <style>
+            html, body {
+                height: 100%;
+            }
+            body {
+                margin: 0;
+            }
+            div {
+                height: 100%;
+                padding: 0;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        </style>
+    </head>
+    <body>
+        <div style="font-size:44px;">😀</div>
+    </body>
+</html>
