Add window to event listener.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         let randomIndex = Math.floor(Math.random() * emojiArray.length);
         emoji.innerHTML = emojiArray[randomIndex];
       }
-      addEventListener('load', function () {
+      window.addEventListener('load', function () {
         changeEmoji();
       });
     </script>
